Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-22103

Wrong device list in alsa

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.0
    • 4.7.4
    • Multimedia
    • None
    • Kubuntu 10.04
    • 88799455673ba6cad488153d248c1651ac345ef0

    Description

      Hi!

      I have a problem with QAudioDeviceInfo on some linux systems with alsa sound system. If I query a device list with QList<QAudioDeviceInfo> availableDevices ( QAudio::Mode mode ) and a default device is defined in alsa I will only get this default device, because if at least one device with the description "Default Audio Device" is found only these devices are collected and returned. I've attached a patch in which default devices are prepended in the list and other devices are appended. Due to this the default device is always the first in the list, but all other devices are still available.

      thanks!

      Attachments

        For Gerrit Dashboard: QTBUG-22103
        # Subject Branch Project Status CR V

        Activity

          People

            mithra_p Mithra Pattison (closed Nokia identity) (Inactive)
            balu1964 Georg Prossinagg
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes